--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://sellanything-com.onrender.com">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -603,7 +603,7 @@
                   <img src="./assets/images/Screenshot from 2023-07-13 00-01-42.png" alt="ecommerce" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">sell anything</h3>
+                <h3 class="project-title">sell anything site</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -611,7 +611,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://shiny-elk-ring.cyclic.app ">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -621,7 +621,7 @@
                   <img src="./assets/images/Screenshot from 2023-07-13 00-03-06.png" alt="ecomemerce" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">student rental</h3>
+                <h3 class="project-title">student rental site</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -633,14 +633,6 @@
         </section>
 
       </article>
-
-
-
-
-
-      <!--
-        - #BLOG
-      -->
 
       <article class="blog" data-page="blog">
 
@@ -710,7 +702,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+ 
 </body>
 
 </html>
