--- a/index.html
+++ b/index.html
@@ -593,32 +593,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://sellanything-com.onrender.com">
+              <a href="https://successful-clam-apron.cyclic.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Screenshot from 2023-07-13 00-01-42.png" alt="ecommerce" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">sell anything site</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://shiny-elk-ring.cyclic.app ">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Screenshot from 2023-07-13 00-03-06.png" alt="ecomemerce" loading="lazy">
+                  <img src="./assets/images/screenshot.png" alt="ecomemerce" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">student rental site</h3>
