--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Northern Cyprus, Morfou</address>
+              <address>Turkey, Istanbul</address>
             </div>
 
           </li>
@@ -593,19 +593,19 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://successful-clam-apron.cyclic.app/">
+              <a href="https://drab-plum-haddock-cape.cyclic.cloud/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/screenshot.png" alt="ecomemerce" loading="lazy">
+                  <img src="./assets/images/ifit.png" alt="fitness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">student rental site</h3>
+                <h3 class="project-title">i-fitness</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Design</p>
 
               </a>
             </li>
