--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/juniornengare" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/_hilari007/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -206,7 +206,7 @@
         <section class="about-text">
           <p>
             I am Hilario Nengare, a dedicated software engineering student originally from Harare, Zimbabwe, and
-            currently pursuing my studies in Northern Cyprus. With a strong emphasis on excellence, I have a profound
+            currently pursuing my studies. With a strong emphasis on excellence, I have a profound
             passion for both JavaScript and Python programming languages. My expertise lies in dissecting complex
             problems and transforming them into elegant and streamlined solutions. With an unwavering commitment to the
             field of software engineering, I continuously explore innovative approaches, utilizing my programming skills
@@ -575,15 +575,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Data Analysis</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Backend </button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Frontend </button>
               </li>
 
             </ul>
@@ -592,7 +592,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Frontend Projects">
               <a href="https://drab-plum-haddock-cape.cyclic.cloud/">
 
                 <figure class="project-img">
@@ -605,7 +605,7 @@
 
                 <h3 class="project-title">i-fitness</h3>
 
-                <p class="project-category">Web Design</p>
+                <p class="project-category">Frontend </p>
 
               </a>
             </li>
