--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Frontend Projects">
-              <a href="https://drab-plum-haddock-cape.cyclic.cloud/">
+            <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://ifit-808.pages.dev/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
