--- a/index.html
+++ b/index.html
@@ -543,15 +543,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Data Analysis</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Backend</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Frontend</button>
             </li>
 
           </ul>
@@ -560,7 +560,7 @@
 
             <button class="filter-select" data-select>
 
-              <div class="select-value" data-selecct-value>Select category</div>
+              <div class="select-value" data-select-value>Select category</div>
 
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
@@ -579,11 +579,11 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Backend </button>
+                <button data-select-item>Backend</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Frontend </button>
+                <button data-select-item>Frontend</button>
               </li>
 
             </ul>
