--- a/index.html
+++ b/index.html
@@ -609,6 +609,23 @@
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://ipodcast.pages.dev/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ipodcast.png" alt="fitness" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">i-podcast</h3>
+
+                <p class="project-category">Frontend </p>
+
+              </a>
+            </li>
 
           </ul>
 
