--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">JavaScript</h5>
+                <h5 class="h5">TypeScript</h5>
                 <data value="70">70%</data>
               </div>
 
