--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Java</h5>
+                <h5 class="h5">C++</h5>
                 <data value="50">50%</data>
               </div>
 
