--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
               <p class="timeline-text">
                 I am currently pursuing a Bachelor of Science in Software Engineering at the European University of
-                Lefke in Lefke, Northern Cyprus. As part of my academic journey, I have undertaken a comprehensive range
+                Lefke. As part of my academic journey, I have undertaken a comprehensive range
                 of coursework that has equipped me with a solid foundation in the field. Some of the relevant courses I
                 have completed include:
               </p>
