--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
               <h4 class="h4 timeline-item-title">European University of Lefke</h4>
 
-              <span>2018 — current</span>
+              <span>2018 — 2022</span>
 
               <p class="timeline-text">
                 I am currently pursuing a Bachelor of Science in Software Engineering at the European University of
@@ -621,6 +621,23 @@
                 </figure>
 
                 <h3 class="project-title">i-podcast</h3>
+
+                <p class="project-category">Frontend </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://igame.pages.dev/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/igame.png" alt="fitness" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">i-game</h3>
 
                 <p class="project-category">Frontend </p>
 
