--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
           <li class="navbar-item">
@@ -205,19 +205,10 @@
 
         <section class="about-text">
           <p>
-            I am Hilario Nengare, a dedicated software engineering student originally from Harare, Zimbabwe, and
-            currently pursuing my studies. With a strong emphasis on excellence, I have a profound
-            passion for both JavaScript and Python programming languages. My expertise lies in dissecting complex
-            problems and transforming them into elegant and streamlined solutions. With an unwavering commitment to the
-            field of software engineering, I continuously explore innovative approaches, utilizing my programming skills
-            to develop cutting-edge solutions.
-          </p>
-
-          <p>
             As a software engineer, my primary responsibility is to develop functional and user-friendly software that
-            not only meets your requirements but also stands out with its visual appeal. I strive to incorporate a
-            personal touch into your product, ensuring that it captures attention and is easy to navigate. My objective
-            is to convey your message and identity in the most creative and captivating manner possible. By combining
+            not only meets requirements but also stands out with its visual appeal. I strive to incorporate artful touch
+            into the product, ensuring that it captures attention and is easy to navigate. My objective
+            is to convey the message and identity in the most creative and captivating manner possible. By combining
             technical expertise with an eye for aesthetics, I aim to deliver software solutions that are both
             technically robust and visually appealing, enhancing the overall user experience.
           </p>
@@ -237,33 +228,16 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Data Science</h4>
-
-                <p class="service-item-text">
-                  By leveraging my coding skills and data science knowledge, I can extract meaningful insights from
-                  data, uncover patterns, and provide valuable recommendations for informed decision-making
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web Apps</h4>
+                <h4 class="h4 service-item-title">UI/UX Design</h4>
 
                 <p class="service-item-text">
-                  With my expertise and attention to detail, I strive to create websites that are visually appealing,
-                  user-friendly, and optimized for performance.
+                  With my expertise and attention to detail, I strive to create user interfaces that are visually
+                  appealing,
+                  user-friendly and gives a great user-experience, and optimized for performance.
                 </p>
               </div>
 
@@ -276,11 +250,12 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile Apps</h4>
+                <h4 class="h4 service-item-title">Server Side</h4>
 
                 <p class="service-item-text">
-                  Whether you need a mobile app for iOS, Android, or cross-platform compatibility, I can tailor the
-                  development process to meet your specific requirements.
+                  Experienced in designing and implementing robust, scalable systems, as well as ensuring data
+                  security and integrity.Strong problem-solving abilities and a deep understanding of software
+                  architecture principles.
                 </p>
               </div>
 
@@ -372,6 +347,22 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Allan Wilson Boys High School</h4>
+
+              <span>2013 — 2016</span>
+
+
+              <strong class="timeline-text"> Was exceptional in courses such as </strong>
+
+              <ul style="color: var(--light-gray); margin-inline:10%;">
+                <li>Computer Studies</li>
+                <li>Mathematics</li>
+                <li>Physical Science</li>
+              </ul>
+
+            </li>
 
             <li class="timeline-item">
 
@@ -379,12 +370,9 @@
 
               <span>2018 — 2022</span>
 
-              <p class="timeline-text">
-                I am currently pursuing a Bachelor of Science in Software Engineering at the European University of
-                Lefke. As part of my academic journey, I have undertaken a comprehensive range
-                of coursework that has equipped me with a solid foundation in the field. Some of the relevant courses I
-                have completed include:
-              </p>
+
+              <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are </strong>
+
               <ul style="color: var(--light-gray); margin-inline:10%;">
                 <li>Data Structures</li>
                 <li>Analysis of Algorithms</li>
@@ -409,27 +397,28 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Practical Projects</h3>
+            <h3 class="h3">Experience</h3>
           </div>
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Course Registration Site</h4>
-              <span>Internet Programming Course | XAMPP, XML, jQuery, and JavaScript</span>
-              <p class="timeline-text">Developed a Course Registration Site as a project for the Internet Programming course. Utilized XAMPP, XML, jQuery, and JavaScript technologies.</p>
+              <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited</h4>
+              <span> July - October 2023 </span>
+              <p class="timeline-text">
+                Implemented API endpoints in Express.js, facilitating seamless communication between the front-end and back-end systems. 
+                Utilized PostgreSQL database to efficiently store and manage user information and posts, ensuring data integrity and accessibility.
+                Engineered robust user authentication and authorization systems, prioritizing security and safeguarding sensitive information.
+                Leveraged React to craft dynamic and responsive user interfaces, enhancing the overall user experience.
+              </p>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Pizza Ordering GUI</h4>
-              <span>Java Programming Course | Java and JFrame</span>
-              <p class="timeline-text">Created a Pizza Ordering GUI application as a project for the Java Programming course. Implemented using Java and JFrame.</p>
+              <h4 class="h4 timeline-item-title">Econet Wireless Zw</h4>
+              <span> March - June 2017</span>
+              <p class="timeline-text">Worked as a Database Administrator apprentice during high-school gap year post completion.</p>
             </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Cartooning App</h4>
-              <span>Digital Image Processing Course | Python and OpenCV</span>
-              <p class="timeline-text">Developed a Cartooning App as a project for the Digital Image Processing course. Utilized Python and OpenCV for image processing.</p>
-            </li>
-          </ol>
           
-  
+          </ol>
+
+
         </section>
 
         <section class="skill">
@@ -446,7 +435,7 @@
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 90%;"></div>
               </div>
 
             </li>
@@ -454,12 +443,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">TypeScript</h5>
-                <data value="70">70%</data>
+                <h5 class="h5">Javascript</h5>
+                <data value="85">85%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 85%;"></div>
               </div>
 
             </li>
@@ -492,7 +481,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">SQL</h5>
+                <h5 class="h5">PostgreSQL</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -525,10 +514,10 @@
 
 
       <!--
-        - #PORTFOLIO
+        - #projects
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="projects" data-page="projects">
 
         <header>
           <h2 class="h2 article-title">Projects</h2>
@@ -541,11 +530,6 @@
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
             </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Data Analysis</button>
-            </li>
-
             <li class="filter-item">
               <button data-filter-btn>Backend</button>
             </li>
@@ -573,11 +557,6 @@
               <li class="select-item">
                 <button data-select-item>All</button>
               </li>
-
-              <li class="select-item">
-                <button data-select-item>Data Analysis</button>
-              </li>
-
               <li class="select-item">
                 <button data-select-item>Backend</button>
               </li>
@@ -668,7 +647,7 @@
 
       <article class="blog" data-page="blog">
 
-      
+
         <section class="blog-posts">
 
 
@@ -734,7 +713,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
- 
+
 </body>
 
 </html>
