--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://github.com/HilarioNengareJr" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
@@ -145,6 +145,11 @@
             </a>
           </li>
 
+          <li class="social-item">
+            <a href="https://discord/hilario" class="social-link">
+              <ion-icon name="logo-discord"></ion-icon>
+            </a>
+          </li>
         </ul>
 
       </div>
@@ -371,7 +376,8 @@
               <span>2018 — 2022</span>
 
 
-              <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are </strong>
+              <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are
+              </strong>
 
               <ul style="color: var(--light-gray); margin-inline:10%;">
                 <li>Data Structures</li>
@@ -404,18 +410,25 @@
               <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited</h4>
               <span> July - October 2023 </span>
               <p class="timeline-text">
-                Implemented API endpoints in Express.js, facilitating seamless communication between the front-end and back-end systems. 
-                Utilized PostgreSQL database to efficiently store and manage user information and posts, ensuring data integrity and accessibility.
-                Engineered robust user authentication and authorization systems, prioritizing security and safeguarding sensitive information.
+                Implemented API endpoints in Express.js, facilitating seamless communication between the front-end and
+                back-end systems.
+                Utilized PostgreSQL database to efficiently store and manage user information and posts, ensuring data
+                integrity and accessibility.
+                Engineered robust user authentication and authorization systems, prioritizing security and safeguarding
+                sensitive information.
                 Leveraged React to craft dynamic and responsive user interfaces, enhancing the overall user experience.
               </p>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Econet Wireless Zw</h4>
-              <span> March - June 2017</span>
-              <p class="timeline-text">Worked as a Database Administrator apprentice during high-school gap year post completion.</p>
-            </li>
-          
+              <h4 class="h4 timeline-item-title">Think Of It Foundation</h4>
+              <span> Jan 2023 - May 2023</span>
+              <p class="timeline-text">
+                Implemented robust backend solutions using Python, leveraging Flask framework for high-performance
+                RESTful APIs. Developed and deployed scalable web applications using modern JavaScript frameworks like
+                React, delivering intuitive user interfaces. Collaborated with product managers to gather requirements,
+                define project scopes, and deliver solutions
+              </p>
+
           </ol>
 
 
@@ -634,6 +647,23 @@
                 </figure>
 
                 <h3 class="project-title">fit.</h3>
+
+                <p class="project-category">Frontend </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://d499aac7.irental.pages.dev/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/rental.png" alt="rental" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">iRental</h3>
 
                 <p class="project-category">Frontend </p>
 
