--- a/index.html
+++ b/index.html
@@ -373,13 +373,16 @@
 
               <h4 class="h4 timeline-item-title">European University of Lefke</h4>
 
-              <span>2018 — 2022</span>
+              <span>2018 — 2019 then resumed 2021-2024</span>
 
 
               <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are
               </strong>
 
               <ul style="color: var(--light-gray); margin-inline:10%;">
+                <span>MAJOR GPA: 3.0 / 4</span>
+                <li>Software Project Management</li>
+                <li>Artificial Neural Networks</li>
                 <li>Data Structures</li>
                 <li>Analysis of Algorithms</li>
                 <li>Database Management Systems</li>
@@ -407,26 +410,32 @@
           </div>
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited</h4>
+              <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited(TRNC · onsite)</h4>
               <span> July - October 2023 </span>
               <p class="timeline-text">
-                Implemented API endpoints in Express.js, facilitating seamless communication between the front-end and
-                back-end systems.
-                Utilized PostgreSQL database to efficiently store and manage user information and posts, ensuring data
-                integrity and accessibility.
-                Engineered robust user authentication and authorization systems, prioritizing security and safeguarding
-                sensitive information.
-                Leveraged React to craft dynamic and responsive user interfaces, enhancing the overall user experience.
+                •Designed and implemented scalable APIs and background workers for managing personal finances using Node
+                Js, Express js and Reactjs for UI/UX.
+                • Implemented several web applications for commerce-driven firms, from identifying system, functional
+                and non-functional requirements and partner dependencies to workload balancing, software implementation, engineering, testing, and
+                enforcing software metrics, admin
+                monitors, and user dashboards.
+                • Enriched system metrics by integrating the platforms with telemetry; facilitated in-depth logging by
+                correlating APIs with vector contexts.
+                • Continuous Integration/Deployment Pipeline Integration, pull requests, code reviews, load/stress
+                testing, unit/integration/e2e testing
               </p>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Think Of It Foundation</h4>
-              <span> Jan 2023 - May 2023</span>
+              <h4 class="h4 timeline-item-title"> Mainstay Digital(Australia · Remote)</h4>
+              <span> 02/2021 - 08/2021</span>
               <p class="timeline-text">
-                Implemented robust backend solutions using Python, leveraging Flask framework for high-performance
-                RESTful APIs. Developed and deployed scalable web applications using modern JavaScript frameworks like
-                React, delivering intuitive user interfaces. Collaborated with product managers to gather requirements,
-                define project scopes, and deliver solutions
+                • Implemented rich visuals for multiple websites using React js.
+                • Engineered End to End testing, carried out Automated Testing for core functionalities using Pytest and Selenium.
+                • Integrated multiple third-party systems.
+                • Implemented enterprise applications of Content Experiment Platforms and Project Management Marketing using React, and AWS.
+                • Designed and developed systems facilitating marketers to perform various optimization experiments .
+                • Automated and optimized business logic, including A/B, Auto-Targeting, and Multivariate Testing.
+                • Completely automated marketing platforms' user-experience testing process by integrating Selenium.
               </p>
 
           </ol>
@@ -444,7 +453,20 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Python</h5>
-                <data value="80">90%</data>
+                <data value="80">99.9%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 99.9%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Javascript</h5>
+                <data value="85">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -456,21 +478,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Javascript</h5>
-                <data value="85">85%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 85%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
                 <h5 class="h5">C++</h5>
-                <data value="50">50%</data>
+                <data value="50">70%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -482,7 +491,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML/CSS</h5>
-                <data value="90">90%</data>
+                <data value="90">95%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -494,7 +503,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">PostgreSQL</h5>
+                <h5 class="h5">SQL</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -583,6 +592,23 @@
           </div>
 
           <ul class="project-list">
+            <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://basket-checkout-challenge.pages.dev/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/pvira.png" alt="vira" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pizza Vira</h3>
+
+                <p class="project-category">Frontend </p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="Frontend">
               <a href="https://ifit-808.pages.dev/">
@@ -653,7 +679,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="Frontend">
-              <a href="https://d499aac7.irental.pages.dev/">
+              <a href="https://irental.pages.dev/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
