--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Turkey, Istanbul</address>
+              <address>Nicosia, Cyprus</address>
             </div>
 
           </li>
@@ -126,7 +126,11 @@
         <div class="separator"></div>
 
         <ul class="social-list">
-
+          <li class="social-item">
+            <a href="www.linkedin.com/in/hilario-nengare-19063120a" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
           <li class="social-item">
             <a href="https://www.facebook.com/juniornengare" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
@@ -411,31 +415,46 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited(TRNC · onsite)</h4>
-              <span> July - October 2023 </span>
+              <span> June - October 2023 </span>
               <p class="timeline-text">
-                •Designed and implemented scalable APIs and background workers for managing personal finances using Node
-                Js, Express js and Reactjs for UI/UX.
-                • Implemented several web applications for commerce-driven firms, from identifying system, functional
-                and non-functional requirements and partner dependencies to workload balancing, software implementation, engineering, testing, and
-                enforcing software metrics, admin
-                monitors, and user dashboards.
-                • Enriched system metrics by integrating the platforms with telemetry; facilitated in-depth logging by
-                correlating APIs with vector contexts.
-                • Continuous Integration/Deployment Pipeline Integration, pull requests, code reviews, load/stress
-                testing, unit/integration/e2e testing
+              <ul style="color: var(--light-gray); margin-inline:10%;">
+                <li>• Implemented location timers making SP’s time tracking super easy for scheduling, payroll and more
+                  utilizing WebSocket for real-time updates, Node js, Express js for back-end, HTML/CSS, React js for
+                  front-end and PostgreSQL for Database.</li>
+                <li> • Developed online booking allowing SP’s to win more work with less effort so that SP’s can share
+                  their booking page and customers can book services directly into their calendars.</li>
+                <li>• Created filters and search functionality to let SP’s access their most critical or used data types
+                  and patterns quickly but also easily.</li>
+                <li>• Facilitated Database and model advancement giving SP’s greater autonomy for future application
+                  requests.</li>
+                <li> • Carried out logic improvements to manipulate elements of software to automate account changes and
+                  key feature additions successfully.</li>
+                <li>• Revised 3rd party mechanism and updated queries responding to some of SP’s most favoured features.
+                </li>
+              </ul>
               </p>
             </li>
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title"> Mainstay Digital(Australia · Remote)</h4>
               <span> 02/2021 - 08/2021</span>
               <p class="timeline-text">
-                • Implemented rich visuals for multiple websites using React js.
-                • Engineered End to End testing, carried out Automated Testing for core functionalities using Pytest and Selenium.
-                • Integrated multiple third-party systems.
-                • Implemented enterprise applications of Content Experiment Platforms and Project Management Marketing using React, and AWS.
-                • Designed and developed systems facilitating marketers to perform various optimization experiments .
-                • Automated and optimized business logic, including A/B, Auto-Targeting, and Multivariate Testing.
-                • Completely automated marketing platforms' user-experience testing process by integrating Selenium.
+              <ul style="color: var(--light-gray); margin-inline:10%;">
+                <li>• Conducted development of performance-critical servers and optimized UI/UX enhancing traffic
+                  retention, utilizing Python, Flask, JavaScript, React js, Git and Docker
+                </li>
+                <li>• Partook in idea inception, requirements gathering, designing, outlining scope and feature building
+                  using Agile’s Kanban and other SDLC.
+                </li>
+                <li> • Prepared technical documentation including design specifications, test plans, and reports.
+                </li>
+                <li>• Integrated and automated business operations for greater efficiency and productivity.
+                </li>
+                <li> • Automated platforms' user-experience testing process by integrating Selenium.
+                </li>
+                <li> • Optimised Wordpress build and custom applications for usability and interaction on multiple
+                  devices and performed tests across multiple use cases.
+                </li>
+              </ul>
               </p>
 
           </ol>
