--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@
                 <h4 class="h4 service-item-title">Travel and Photography</h4>
 
                 <p class="service-item-text">
-                  With a keen eye for detail and a commitment to excellence, I strive to deliver exceptional images that
-                  meet and exceed client expectations.
+                  I enjoy going out into nature and hiking. While I am at it I tend to snap sunsets and horizons. With a
+                  keen eye for detail and love for aesthetics I always make room for photography and I'm planning to build a
+                  photos portfolio soon.
                 </p>
               </div>
 
@@ -362,15 +363,6 @@
 
               <span>2013 — 2016</span>
 
-
-              <strong class="timeline-text"> Was exceptional in courses such as </strong>
-
-              <ul style="color: var(--light-gray); margin-inline:10%;">
-                <li>Computer Studies</li>
-                <li>Mathematics</li>
-                <li>Physical Science</li>
-              </ul>
-
             </li>
 
             <li class="timeline-item">
@@ -385,21 +377,32 @@
 
               <ul style="color: var(--light-gray); margin-inline:10%;">
                 <span>MAJOR GPA: 3.0 / 4</span>
-                <li>Software Project Management</li>
-                <li>Artificial Neural Networks</li>
-                <li>Data Structures</li>
-                <li>Analysis of Algorithms</li>
-                <li>Database Management Systems</li>
-                <li>Internet Programming</li>
-                <li>Operating Systems</li>
-                <li>Software Testing and Quality Assurance</li>
-                <li>Software Architecture and Design</li>
-                <li>Principles of Programming</li>
-                <li>Object-Oriented Programming</li>
+                <h4>Major Courses</h4>
+
+                <li>• Principles of Programming</li>
+                <li>• Data Structures</li>
+                <li>• Analysis of Algorithms</li>
+                <li>• Object-Oriented Programming</li>
+
+
+                <h4>Core Software Development Skills</h4>
+
+                <li>• Software Architecture and Design</li>
+                <li>• Software Project Management</li>
+                <li>• Software Testing and Quality Assurance</li>
+
+
+                <h4>Specialized Skills</h4>
+
+                <li>• Artificial Neural Networks</li>
+                <li>• Database Management Systems</li>
+                <li>• Internet Programming</li>
+                <li>• Operating Systems</li>
+
               </ul>
 
             </li>
-          </ol>
+
 
         </section>
 
@@ -457,7 +460,7 @@
               </ul>
               </p>
 
-          </ol>
+
 
 
         </section>
@@ -531,7 +534,17 @@
               </div>
 
             </li>
-
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Git</h5>
+                <data value="85">
+                  85%
+                </data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+            </li>
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">NoSQL</h5>
@@ -544,6 +557,17 @@
               </div>
             </li>
 
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Docker</h5>
+                <data value="70">
+                  70%
+                </data>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+            </li>
           </ul>
 
         </section>
