--- a/index.html
+++ b/index.html
@@ -369,14 +369,13 @@
 
               <h4 class="h4 timeline-item-title">European University of Lefke</h4>
 
-              <span>2018 — 2019 then resumed 2021-2024</span>
+              <span>2024</span>
 
 
               <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are
               </strong>
 
               <ul style="color: var(--light-gray); margin-inline:10%;">
-                <span>MAJOR GPA: 3.0 / 4</span>
                 <h4>Major Courses</h4>
 
                 <li>• Principles of Programming</li>
@@ -418,49 +417,14 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited(TRNC · onsite)</h4>
-              <span> June - October 2023 </span>
-              <p class="timeline-text">
-              <ul style="color: var(--light-gray); margin-inline:10%;">
-                <li>• Implemented location timers making SP’s time tracking super easy for scheduling, payroll and more
-                  utilizing WebSocket for real-time updates, Node js, Express js for back-end, HTML/CSS, React js for
-                  front-end and PostgreSQL for Database.</li>
-                <li> • Developed online booking allowing SP’s to win more work with less effort so that SP’s can share
-                  their booking page and customers can book services directly into their calendars.</li>
-                <li>• Created filters and search functionality to let SP’s access their most critical or used data types
-                  and patterns quickly but also easily.</li>
-                <li>• Facilitated Database and model advancement giving SP’s greater autonomy for future application
-                  requests.</li>
-                <li> • Carried out logic improvements to manipulate elements of software to automate account changes and
-                  key feature additions successfully.</li>
-                <li>• Revised 3rd party mechanism and updated queries responding to some of SP’s most favoured features.
-                </li>
-              </ul>
-              </p>
+              <span> June - August 2023 </span>
             </li>
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title"> Mainstay Digital(Australia · Remote)</h4>
               <span> 02/2021 - 08/2021</span>
               <p class="timeline-text">
-              <ul style="color: var(--light-gray); margin-inline:10%;">
-                <li>• Conducted development of performance-critical servers and optimized UI/UX enhancing traffic
-                  retention, utilizing Python, Flask, JavaScript, React js, Git and Docker
-                </li>
-                <li>• Partook in idea inception, requirements gathering, designing, outlining scope and feature building
-                  using Agile’s Kanban and other SDLC.
-                </li>
-                <li> • Prepared technical documentation including design specifications, test plans, and reports.
-                </li>
-                <li>• Integrated and automated business operations for greater efficiency and productivity.
-                </li>
-                <li> • Automated platforms' user-experience testing process by integrating Selenium.
-                </li>
-                <li> • Optimised Wordpress build and custom applications for usability and interaction on multiple
-                  devices and performed tests across multiple use cases.
-                </li>
-              </ul>
+              
               </p>
-
-
 
 
         </section>
@@ -475,7 +439,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Python</h5>
-                <data value="80">99.9%</data>
+                <data value="80">90%</data>
               </div>
 
               <div class="skill-progress-bg">
