--- a/index.html
+++ b/index.html
@@ -270,24 +270,6 @@
 
             </li>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Travel and Photography</h4>
-
-                <p class="service-item-text">
-                  I enjoy going out into nature and hiking. While I am at it I tend to snap sunsets and horizons. With a
-                  keen eye for detail and love for aesthetics I always make room for photography and I'm planning to build a
-                  photos portfolio soon.
-                </p>
-              </div>
-
-            </li>
-
           </ul>
 
         </section>
@@ -372,33 +354,8 @@
               <span>2024</span>
 
 
-              <strong class="timeline-text"> Studied Software Engineering Bsc and some of the relevant courses are
+              <strong class="timeline-text"> Software Engineering Bsc
               </strong>
-
-              <ul style="color: var(--light-gray); margin-inline:10%;">
-                <h4>Major Courses</h4>
-
-                <li>• Principles of Programming</li>
-                <li>• Data Structures</li>
-                <li>• Analysis of Algorithms</li>
-                <li>• Object-Oriented Programming</li>
-
-
-                <h4>Core Software Development Skills</h4>
-
-                <li>• Software Architecture and Design</li>
-                <li>• Software Project Management</li>
-                <li>• Software Testing and Quality Assurance</li>
-
-
-                <h4>Specialized Skills</h4>
-
-                <li>• Artificial Neural Networks</li>
-                <li>• Database Management Systems</li>
-                <li>• Internet Programming</li>
-                <li>• Operating Systems</li>
-
-              </ul>
 
             </li>
 
@@ -416,12 +373,8 @@
           </div>
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Bilkan Bilişim & Teknoloji limited(TRNC · onsite)</h4>
-              <span> June - August 2023 </span>
-            </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title"> Mainstay Digital(Australia · Remote)</h4>
-              <span> 02/2021 - 08/2021</span>
+              <h4 class="h4 timeline-item-title"> Mainstay Digital (Australia · Remote)</h4>
+              <span> June 2023 - September 2023</span>
               <p class="timeline-text">
               
               </p>
