--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/profile-pic (1).png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/propic.png" type="image/svg">
 
   <!--
     - custom css link
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/profile-pic (1).png" alt="Hilario Nengare" width="80">
+          <img src="./assets/images/propic.png" alt="Hilario Nengare" width="80" style="border-radius: 15px;">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Hilario Nengare Junior">Hilario J Nengare</h1>
+          <h1 class="name" title="Hilario Nengare Junior">Hilario Jr Nengare</h1>
 
           <p class="title">Software Engineer</p>
         </div>
@@ -213,14 +213,35 @@
         </header>
 
         <section class="about-text">
-          <p>
-            As a software engineer, my primary responsibility is to develop functional and user-friendly software that
-            not only meets requirements but also stands out with its visual appeal. I strive to incorporate artful touch
-            into the product, ensuring that it captures attention and is easy to navigate. My objective
-            is to convey the message and identity in the most creative and captivating manner possible. By combining
-            technical expertise with an eye for aesthetics, I aim to deliver software solutions that are both
-            technically robust and visually appealing, enhancing the overall user experience.
-          </p>
+            <ul class="about-li">
+              <li>As a Thinker, my primary knack is for:
+                <ul>
+                  <li>Reading complex problems</li>
+                  <li>Translating them into manageable chunks of possible solutions</li>
+                  <li>Picking the best few solutions</li>
+                  <li>Optimizing the stand-out solution for best results</li>
+                  <li>Eventually (but not finally) yielding simpler but time-proof solutions</li>
+                </ul>
+              </li>
+              <li>As a Frontend Software Engineer, I strive to:
+                <ul>
+                  <li>Incorporate optimized artful touch into the product</li>
+                  <li>Ensure that it captures attention</li>
+                  <li>Make it learnable, better yet intuitive</li>
+                  <li>Ensure it is easy to navigate</li>
+                </ul>
+              </li>
+              <li>As a Backend Software Engineer, I am capable of:
+                <ul>
+                  <li>Merging coding finesse and design aesthetics</li>
+                  <li>Providing optimized servers that serve their intended purpose at high speed</li>
+                  <li>Ensuring robust and seamless API interactions</li>
+                </ul>
+              </li>
+            </ul>
+            
+            <p>My objective is to convey the message and identity in the most creative and captivating manner possible. By combining technical expertise with an eye for aesthetics, I aim to deliver software solutions that are both technically robust and visually appealing, enhancing the overall user experience.</p>
+            </p>
         </section>
 
 
@@ -241,12 +262,15 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">UI/UX Design</h4>
+                <h4 class="h4 service-item-title">Frontend Development</h4>
 
                 <p class="service-item-text">
-                  With my expertise and attention to detail, I strive to create user interfaces that are visually
-                  appealing,
-                  user-friendly and gives a great user-experience, and optimized for performance.
+                  Avid Frontend developer with the ability to build and maintain frontend
+                  templates and/or landing pages according to web standards and refine layouts
+                  based on User Feedback and User Experience design input. Very passionate about optimizing user
+                  interfaces and have a track record of
+                  delivering results that align with both client expectations and industry best
+                  practices.
                 </p>
               </div>
 
@@ -259,13 +283,14 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Server Side</h4>
+                <h4 class="h4 service-item-title">Backend Development</h4>
 
                 <p class="service-item-text">
                   Experienced in designing and implementing robust, scalable systems, as well as ensuring data
-                  security and integrity.Strong problem-solving abilities and a deep understanding of software
-                  architecture principles.
-                </p>
+                  security and integrity. Strong problem-solving abilities and a deep understanding of software
+                  architecture principles. Deep understanding of Data Structures and Algorithms to ensure best server
+                  standard.
+                  Knowledge of SQL database management and integration.</p>
               </div>
 
             </li>
@@ -344,6 +369,8 @@
               <h4 class="h4 timeline-item-title">Allan Wilson Boys High School</h4>
 
               <span>2013 — 2016</span>
+              <strong class="timeline-text"> High School STEM Diploma
+              </strong>
 
             </li>
 
@@ -351,7 +378,7 @@
 
               <h4 class="h4 timeline-item-title">European University of Lefke</h4>
 
-              <span>2024</span>
+              <span>2020 - 2024</span>
 
 
               <strong class="timeline-text"> Software Engineering Bsc
@@ -376,10 +403,16 @@
               <h4 class="h4 timeline-item-title"> Mainstay Digital (Australia · Remote)</h4>
               <span> June 2023 - September 2023</span>
               <p class="timeline-text">
-              
+                Software Engineer (Intern)
               </p>
-
-
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title"> Bilkan Bilişim ve Teknoloji (Cyprus · Hybrid)</h4>
+              <span> June 2022 - September 2022</span>
+              <p class="timeline-text">
+                Software Engineer (Intern)
+              </p>
+            </li>
         </section>
 
         <section class="skill">
@@ -392,20 +425,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Python</h5>
-                <data value="80">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 99.9%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Javascript</h5>
-                <data value="85">90%</data>
+                <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -417,12 +437,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">C++</h5>
-                <data value="50">70%</data>
+                <h5 class="h5">Javascript</h5>
+                <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 90%;"></div>
               </div>
 
             </li>
@@ -430,7 +450,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML/CSS</h5>
-                <data value="90">95%</data>
+                <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -464,16 +484,28 @@
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">NoSQL</h5>
-                <data value="75">
-                  75%
+                <h5 class="h5">JSON</h5>
+                <data value="85">
+                  85%
                 </data>
               </div>
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%;"></div>
+                <div class="skill-progress-fill" style="width: 85%;"></div>
               </div>
             </li>
 
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">C/C++</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Docker</h5>
@@ -553,6 +585,23 @@
 
           <ul class="project-list">
             <li class="project-item  active" data-filter-item data-category="Frontend">
+              <a href="https://hilarionengarejr.github.io/music-player/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/music.png" alt="music player image" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Music Player Website</h3>
+
+                <p class="project-category">Frontend </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Frontend">
               <a href="https://basket-checkout-challenge.pages.dev/">
 
                 <figure class="project-img">
@@ -563,7 +612,7 @@
                   <img src="./assets/images/pvira.png" alt="vira" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Pizza Vira</h3>
+                <h3 class="project-title">Pizza Vira Landing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -581,7 +630,7 @@
                   <img src="./assets/images/ifit.png" alt="fitness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">i-fitness</h3>
+                <h3 class="project-title">Fitness Landing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -598,7 +647,7 @@
                   <img src="./assets/images/ipodcast.png" alt="fitness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">i-podcast</h3>
+                <h3 class="project-title">Podcast Landing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -615,7 +664,7 @@
                   <img src="./assets/images/igame.png" alt="fitness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">i-game</h3>
+                <h3 class="project-title">Game Website Langing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -632,7 +681,7 @@
                   <img src="./assets/images/fit.png" alt="fitness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">fit.</h3>
+                <h3 class="project-title">Diet Website Landing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -649,7 +698,7 @@
                   <img src="./assets/images/rental.png" alt="rental" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">iRental</h3>
+                <h3 class="project-title">Car Rental Landing Page</h3>
 
                 <p class="project-category">Frontend </p>
 
@@ -666,7 +715,41 @@
                   <img src="./assets/images/tu.png" alt="rental" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Traffic Updator</h3>
+                <h3 class="project-title">Traffic Updates Website </h3>
+
+                <p class="project-category">Backend</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Backend">
+              <a href="https://student-rental-web-io.onrender.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/studentrental.png" alt="rental" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Student Rental Website</h3>
+
+                <p class="project-category">Backend</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Backend">
+              <a href="https://tourguide.onrender.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/tourguide.png" alt="rental" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Travel Guide Website</h3>
 
                 <p class="project-category">Backend</p>
 
