--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Hilario Junior Nengare">
+  <meta property="og:description" content="This is my portfolio, it has all my up-to-date contact or professional information.">
+  <meta property="og:image" content="./assets/images/propic.png">
+  <meta property="og:type" content="website">
   <title>Hilario Junior Nengare</title>
 
   <!--
