--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Hilario Junior Nengare">
   <meta property="og:description" content="This is my portfolio, it has all my up-to-date contact or professional information.">
-  <meta property="og:image" content="./assets/images/propic.png">
+  <meta property="og:image" content="./assets/images/portfolio.jpg">
   <meta property="og:type" content="website">
   <title>Hilario Junior Nengare</title>
 
