--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <ul class="social-list">
           <li class="social-item">
-            <a href="www.linkedin.com/in/hilario-nengare-19063120a" class="social-link">
+            <a href="www.linkedin.com/in/hilario-nengare-19063120a/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -148,7 +148,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/_hilari007/" class="social-link">
+            <a href="https://www.instagram.com/hilariojrn" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
