--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <section class="about-text">
             <ul class="about-li">
-              <li>As an Engineer, I have a knack for:
+              <li>Expertise in:
                 <ul>
                   <li>Reading complex problems</li>
                   <li>Translating them into manageable chunks of possible solutions</li>
