--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Nicosia, Cyprus</address>
+              <address>Dubai, United Arab Emirates</address>
             </div>
 
           </li>
@@ -131,7 +131,7 @@
 
         <ul class="social-list">
           <li class="social-item">
-            <a href="www.linkedin.com/in/hilario-nengare-19063120a/" class="social-link">
+            <a href="www.linkedin.com/in/hilario-nengare-19063120a" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -154,8 +154,8 @@
           </li>
 
           <li class="social-item">
-            <a href="https://discord/hilario" class="social-link">
-              <ion-icon name="logo-discord"></ion-icon>
+            <a href="https://stackoverflow.com/users/20430814/hilario-nengare" class="social-link">
+              <ion-icon name="logo-stackoverflow"></ion-icon>
             </a>
           </li>
         </ul>
