--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Dubai, United Arab Emirates</address>
+              <address>Nicosia, Cyprus</address>
             </div>
 
           </li>
