--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
           <ul class="project-list">
             <li class="project-item  active" data-filter-item data-category="Frontend">
-              <a href="https://hilarionengarejr.github.io/music-player/">
+              <a href="https://hilarionengarejr.github.io/Music-Player/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
