--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Hilario Junior Nengare">
   <meta property="og:description"
     content="This is my portfolio, it has all my up-to-date contact or professional information.">
-  <meta property="og:image" content="./assets/images/portfolio.jpg">
+  <meta property="og:image" content="./assets/images/avatar.jpg">
   <meta property="og:type" content="article">
   <title>Hilario Junior Nengare</title>
 
